@@ -1,3 +1,9 @@
+2008-11-02 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b6
+
+ * Change: CSS updates in danmaher skin.
+
+ * Fix: Header in popups/edit_appearance.php
+
 2008-11-01 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b5
 
  * Fix: Little layout in search results.
